--- a/.github/workflows/generate-baseline-profile.yml
+++ b/.github/workflows/generate-baseline-profile.yml
@@ -1,47 +1,48 @@
+name: baseline-profiles
+
+run-name: ${{ github.actor }} requested a workflow
+
+# This should be a manual trigger so this actions gets executed every time make a new pull request.
+# Change this event to what suits your project best.
+# Read more at https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows
 on:
-  pull_request:
-    branches:
-      - master
+  workflow_dispatch:
 
 jobs:
+
   generate-baseline-profiles:
-    name: Generate baseline profile
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-
+    runs-on: macos-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up JDK
-        uses: actions/setup-java@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: temurin
+          java-version: 17
 
-      - name: Set up Android SDK
-        uses: android-actions/setup-android@v2
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2.9.0
+
+      - name: Grant Permissions to gradlew
+        run: chmod +x gradlew
+
+      - name: Build app and benchmark
+        run: ./gradlew :app:assembleBenchmark # change the 'app' with your app module's name
+
+      - name: Clean Managed Devices
+        run: ./gradlew cleanManagedDevices --unused-only
+
+      # Generates Baseline Profile
+      - name: Generate Baseline Profile
+        run: ./gradlew generateBaselineProfile -Pandroid.testoptions.manageddevices.emulator.gpu="swiftshader_indirect" -Pandroid.testInstrumentationRunnerArguments.androidx.benchmark.enabledRules=BaselineProfile -Pandroid.experimental.testOptions.managedDevices.setupTimeoutMinutes=20 -Dorg.gradle.workers.max=4
+
+      # Create Pull Request
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v5
         with:
-          api-level: 33
-          build-tools: 33.0.0
-
-      - name: Cache Gradle
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
-
-      - name: Generate Baseline Profiles
-        run: ./gradlew :app:generateBaselineProfile
-        env:
-          ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
+          commit-message: "Generate baseline profiles"
+          title: "Generate baseline profiles"
+          delete-branch: true
+          branch: actions/baseline-profiles
 
 
 #name: Generate Baseline Profile
