--- a/.github/workflows/generate-baseline-profile.yml
+++ b/.github/workflows/generate-baseline-profile.yml
@@ -1,51 +1,54 @@
-name: baseline-profiles
+name: Generate Baseline Profile
 
-on:
-  pull_request:
-    branches:
-      - master
+on: pull_request
 
 jobs:
-  generate-baseline-profiles:
-    runs-on: macos-latest
+  test:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 17
+      - name: checkout
+        uses: actions/checkout@v4
 
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2.9.0
-
-      - name: Grant Permissions to gradlew
-        run: chmod +x gradlew
-
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v2
-        with:
-          api-level: 30
-          target: android-30
-          ndk: 21.4.7075529
-
-      - name: Start Emulator
+      - name: Enable KVM
         run: |
-          sudo $ANDROID_HOME/emulator/emulator -list-avds
-          sudo $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window -gpu swiftshader_indirect -no-snapshot &
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
 
-      - name: Wait for Emulator
-        run: adb wait-for-device
-        timeout-minutes: 10
-
-      # Generates Baseline Profile
-      - name: Generate Baseline Profile
-        run: ./gradlew generateBaselineProfile -Pandroid.testoptions.manageddevices.emulator.gpu="swiftshader_indirect" -Pandroid.testInstrumentationRunnerArguments.androidx.benchmark.enabledRules=BaselineProfile -Pandroid.experimental.testOptions.managedDevices.setupTimeoutMinutes=20 -Dorg.gradle.workers.max=4
-
-      # Create Pull Request
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v5
+      - name: run tests
+        uses: reactivecircus/android-emulator-runner@v2
         with:
-          commit-message: "Generate baseline profiles"
-          title: "Generate baseline profiles"
-          delete-branch: true
-          branch: actions/baseline-profiles
+          api-level: 29
+          script: ./gradlew connectedCheck
+
+#jobs:
+#  build-benchmark-apks:
+#    name: Generate baseline profile
+#    runs-on: macos-latest
+#    timeout-minutes: 20
+#
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v3
+#
+#      - name: Validate Gradle Wrapper
+#        uses: gradle/wrapper-validation-action@v1
+#
+#      - name: Grant Permissions to gradlew
+#        run: chmod +x gradlew
+#
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          distribution: 'zulu'
+#          java-version: 17
+#
+#      - name: Install GMD image for baseline profile generation
+#        run: yes | "$ANDROID_HOME"/cmdline-tools/latest/bin/sdkmanager "system-images;android-33;aosp_atd;x86_64"
+#
+#      - name: Accept Android licenses
+#        run: yes | "$ANDROID_HOME"/cmdline-tools/latest/bin/sdkmanager --licenses || true
+#
+#      - name: Generate profile
+#        run: ./gradlew :app:generateBaselineProfile
+#          -Pandroid.testoptions.manageddevices.emulator.gpu="swiftshader_indirect
