--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-versionName = "1.0.5"
-versionCode = "3"
+versionName = "1.1.0-alpha01"
+versionCode = "4"
 
 androidMinSdk = "27"
 androidTargetSdk = "34"
