build flavors provided

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,5 @@
 [versions]
-foundationAndroid = "1.7.0-beta07"
-konfettiCompose = "2.0.4"
-materialVersion = "1.13.0-alpha05"
+
 versionName = "1.1.0-alpha01"
 versionCode = "4"
 
@@ -12,6 +10,10 @@ androidCompileSdk = "35"
 jvmTarget = "17"
 compose-compiler = "1.5.14"
 
+appUpdate = "2.1.0"
+foundationAndroid = "1.7.0-beta07"
+konfettiCompose = "2.0.4"
+materialVersion = "1.13.0-alpha05"
 activityCompose = "1.9.1"
 composecollapsingtoolbar = "1.0.8"
 coreKtx = "1.13.1"
@@ -33,6 +35,8 @@ navigationComposeVersion = "2.7.7"
 
 [libraries]
 androidx-foundation-android = { module = "androidx.compose.foundation:foundation-android", version.ref = "foundationAndroid" }
+app-update = { module = "com.google.android.play:app-update", version.ref = "appUpdate" }
+app-update-ktx = { module = "com.google.android.play:app-update-ktx", version.ref = "appUpdate" }
 konfetti-compose = { module = "nl.dionsegijn:konfetti-compose", version.ref = "konfettiCompose" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
