--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,5 @@ local.properties
 /.idea/deploymentTargetDropDown.xml
 /app/release
 /.idea/
-/app/foss/release
-/app/market/release
+/app/foss
+/app/market
